[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.5.1"
reqwest = "0.11.24"
serde = { version = "1.0.196", features = ["derive"] }
tokio = "1.36.0"
